[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/SceneScripts/DeckEditor.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/DeckDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=3]

[node name="DeckEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="SaveDisplay" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="Background" type="NinePatchRect" parent="SaveDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -48.0
margin_right = 128.0
margin_bottom = 48.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="SaveDisplay/Background"]
margin_left = 20.0
margin_top = 20.0
margin_right = 236.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="SaveDisplay/Background"]
margin_left = 67.0
margin_top = 58.71
margin_right = 108.0
margin_bottom = 78.71
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="SaveDisplay/Background"]
margin_left = 147.0
margin_top = 58.71
margin_right = 189.0
margin_bottom = 78.71
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDisplay" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="Background" type="NinePatchRect" parent="FileDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -50.0
margin_right = -14.0
margin_bottom = 3.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHolder" type="VBoxContainer" parent="FileDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -45.0
margin_right = 140.0
margin_bottom = 45.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FileDisplay/ButtonHolder"]
margin_top = 24.0
margin_right = 280.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="BackButton" type="Button" parent="FileDisplay/ButtonHolder"]
margin_top = 46.0
margin_right = 280.0
margin_bottom = 66.0
text = "Back"

[node name="ConfirmNode" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="NinePatchRect" type="NinePatchRect" parent="ConfirmNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -43.0
margin_right = 64.0
margin_bottom = 58.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -31.0
margin_right = 43.5
margin_bottom = 31.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmNode/VBoxContainer"]
margin_right = 87.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Are you sure?"

[node name="ConfirmYesButton" type="Button" parent="ConfirmNode/VBoxContainer"]
margin_top = 24.0
margin_right = 87.0
margin_bottom = 44.0
text = "Yes"

[node name="ConfirmNoButton" type="Button" parent="ConfirmNode/VBoxContainer"]
margin_top = 54.0
margin_right = 87.0
margin_bottom = 74.0
text = "Back"

[node name="ConfirmDeleteNode" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="NinePatchRect" type="NinePatchRect" parent="ConfirmDeleteNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -64.0
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmDeleteNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -45.5
margin_right = 102.0
margin_bottom = 45.5
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmDeleteNode/VBoxContainer"]
margin_right = 204.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Are you sure you want to delete
fileName"

[node name="ConfirmYesButton" type="Button" parent="ConfirmDeleteNode/VBoxContainer"]
margin_top = 41.0
margin_right = 204.0
margin_bottom = 61.0
text = "Yes"

[node name="ConfirmNoButton" type="Button" parent="ConfirmDeleteNode/VBoxContainer"]
margin_top = 71.0
margin_right = 204.0
margin_bottom = 91.0
text = "Back"

[node name="SortButtons" type="Node2D" parent="."]
position = Vector2( 0, -192 )

[node name="Sort Order" type="Label" parent="SortButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -55.0
margin_right = 3.0
margin_bottom = -41.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sort Order:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SortButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.5
margin_top = -20.0
margin_right = 142.5
margin_bottom = 12.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeButton" type="Button" parent="SortButtons/HBoxContainer"]
margin_right = 90.0
margin_bottom = 32.0
text = "      Type      "

[node name="PowerButton" type="Button" parent="SortButtons/HBoxContainer"]
margin_left = 100.0
margin_right = 187.0
margin_bottom = 32.0
text = "    Power     "

[node name="ToughnessButton" type="Button" parent="SortButtons/HBoxContainer"]
margin_left = 197.0
margin_right = 285.0
margin_bottom = 32.0
text = " Toughness "

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = -482.0
margin_top = -250.0
margin_right = -406.0
margin_bottom = -182.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Menu"]
margin_right = 134.0
margin_bottom = 20.0
text = "Save Deck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="Menu"]
margin_top = 30.0
margin_right = 134.0
margin_bottom = 50.0
text = "Load Deck"

[node name="NewButton" type="Button" parent="Menu"]
margin_top = 60.0
margin_right = 134.0
margin_bottom = 80.0
text = "New Deck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Menu"]
margin_top = 90.0
margin_right = 134.0
margin_bottom = 110.0
text = "Delete Deck File"

[node name="BackButton" type="Button" parent="Menu"]
margin_top = 120.0
margin_right = 134.0
margin_bottom = 140.0
text = "Back to Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="PageHolder" type="Node2D" parent="."]
position = Vector2( 0, 32 )
scale = Vector2( 1.5, 1.5 )

[node name="FusionPreview" type="Node2D" parent="."]
position = Vector2( 0, 192 )

[node name="DeckDisplay" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, -200 )

[connection signal="text_entered" from="SaveDisplay/Background/LineEdit" to="." method="onSaveEnter"]
[connection signal="pressed" from="SaveDisplay/Background/SaveButton" to="." method="onFileSaveButtonPressed"]
[connection signal="pressed" from="SaveDisplay/Background/BackButton" to="." method="onFileSaveBackPressed"]
[connection signal="pressed" from="FileDisplay/ButtonHolder/BackButton" to="." method="onFileLoadBackPressed"]
[connection signal="pressed" from="ConfirmNode/VBoxContainer/ConfirmYesButton" to="." method="onConfirmYesPressed"]
[connection signal="pressed" from="ConfirmNode/VBoxContainer/ConfirmNoButton" to="." method="onConfirmNoPressed"]
[connection signal="pressed" from="ConfirmDeleteNode/VBoxContainer/ConfirmYesButton" to="." method="onDeleteConfirmed"]
[connection signal="pressed" from="ConfirmDeleteNode/VBoxContainer/ConfirmNoButton" to="." method="onDeleteBackPressed"]
[connection signal="pressed" from="SortButtons/HBoxContainer/TypeButton" to="." method="setSortOrder" binds= [ 0 ]]
[connection signal="pressed" from="SortButtons/HBoxContainer/PowerButton" to="." method="setSortOrder" binds= [ 1 ]]
[connection signal="pressed" from="SortButtons/HBoxContainer/ToughnessButton" to="." method="setSortOrder" binds= [ 2 ]]
[connection signal="pressed" from="Menu/SaveButton" to="." method="onSavePressed"]
[connection signal="pressed" from="Menu/LoadButton" to="." method="onLoadPressed"]
[connection signal="pressed" from="Menu/NewButton" to="." method="onNewPressed"]
[connection signal="pressed" from="Menu/Button" to="." method="onDeleteButtonPressed"]
[connection signal="pressed" from="Menu/BackButton" to="." method="onExitPressed"]
